No longer truncating metadata labels

--- a/src/main/webapp/app/resources/styles/sass/discovery-context/_all.scss
+++ b/src/main/webapp/app/resources/styles/sass/discovery-context/_all.scss
@@ -263,6 +263,7 @@
 
                 .dc-field-key {
                   font-weight: bold;
+                  white-space: normal;
                 }
 
                 .dc-field-value {
